<resources>
    <string name="app_name">E-Commerce App</string>
    <string name="home">Home</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Ürün Başlığı</string>
    <string name="product_explanation">Ürün Açıklaması</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_category">Ürün Kategorisi</string>
    <string name="product_price">Ürün Fiyatı</string>
    <string name="button_add_product">Ürünü Ekle</string>
    <string name="button_add_img">Ürünün Resmini Ekleyin</string>
    <string name="button_delete">Ürünü Sil</string>
    <string name="button_update">Ürünü güncelle</string>
    <string name="empty_fields_error">Lütfen tüm alanları doldurunuz.</string>
    <string-array name="category">
        <item>Kozmetik</item>
        <item>Moda</item>
        <item>Elektronik</item>
        <item>Süper Market</item>
        <item>Kırtasiye</item>
    </string-array>
</resources>