<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ProductDetail"
    tools:context=".ProductDetailFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgProduct"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/item_background"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="@string/product_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductExplanation"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:background="@drawable/item_background"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="@string/product_explanation" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductCategory"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/item_background"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="@string/product_category" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvProductPrice"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/item_background"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="@string/product_price" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottomContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdateProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:text="@string/button_update"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeleteProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:text="@string/button_delete"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>